--- a/index.html
+++ b/index.html
@@ -23,28 +23,28 @@
 
 <body>
     <header class="header">
-        <div class="container">
-            <div class="header-block">
-                <a href="#" class="header-home-link">
-                    <span class="header-logo-web">
+        <div class="header__container">
+            <div class="header__navigation">
+                <a href="#" class="logo">
+                    <span class="logo__part1">
                         Web
                     </span>
-                    <span class="header-logo-studio">
+                    <span class="logo__part2">
                         Studio
                     </span>
                 </a>
-                <nav class="navigation">
-                    <ul class="navigation-list">
-                        <li class="navigation-list-item">
-                            <a href="index.html" class="navigation-link">Студія
+                <nav class="header__menu">
+                    <ul class="header__menu-list">
+                        <li class="header__menu-item">
+                            <a href="index.html" class="header__menu-link">Студія
                             </a>
                         </li>
-                        <li class="navigation-list-item">
-                            <a href="portfolio.html" class="navigation-link">Портфоліо
+                        <li class="header__menu-item">
+                            <a href="portfolio.html" class="header__menu-link">Портфоліо
                             </a>
                         </li>
-                        <li class="navigation-list-item">
-                            <a href="#contact" class="navigation-link">Контакти
+                        <li class="header__menu-item">
+                            <a href="#contact" class="header__menu-link">Контакти
                             </a>
                         </li>
                     </ul>
@@ -53,21 +53,21 @@
 
             </div>
 
-            <div class="contact-block">
+            <div class="header__contact">
 
 
-                <ul class="contact-list">
-                    <li class="contact-list-item">
-                        <a href="mailto:info@devstudio.com" class="contact-link">
-                            <svg class="contact-link-svg" width="16" height="12">
+                <ul class="header__contact-list">
+                    <li class="header__contact-item">
+                        <a href="mailto:info@devstudio.com" class="header__contact-link">
+                            <svg class="header__contact-svg" width="16" height="12">
                                 <use href="./images/icons/symbol-defs.svg#icon-mail"> </use>
                             </svg>
                             info@devstudio.com
                         </a>
                     </li>
-                    <li class="contact-list-item">
-                        <a href="tel:380961111111" class="contact-link">
-                            <svg class="contact-link-svg" width="10" height="16">
+                    <li class="header__contact-item">
+                        <a href="tel:380961111111" class="header__contact-link">
+                            <svg class="header__contact-svg" width="10" height="16">
                                 <use href="./images/icons/symbol-defs.svg#icon-smartphone"></use>
                             </svg>
                             +380961111111</a>
@@ -375,11 +375,11 @@
         <div class="container">
 
             <div>
-                <div class="footer-logo">
-                    <span class="footer-logo-web">
+                <div class="logo">
+                    <span class="logo__part1">
                         Web
                     </span>
-                    <span class="footer-logo-studio">
+                    <span class="logo__part2 logo__part2--white">
                         Studio
                     </span>
                 </div>
