--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
     <header class="header">
-        <div class="header__container">
+        <div class="header__container container">
             <div class="header__navigation">
                 <a href="#" class="logo">
                     <span class="logo__part1">
@@ -372,7 +372,7 @@
 
     </main>
     <footer class="footer">
-        <div class="container">
+        <div class="footer__container container">
 
             <div>
                 <div class="logo">
@@ -384,45 +384,45 @@
                     </span>
                 </div>
 
-                <p class="footer-text" id="contact">
+                <p class="footer__contact footer__contact--white" id="contact">
                     м. Київ, пр-т Лесі Українки, 26
                 </p>
-                <p class="footer-contact">
+                <p class="footer__contact">
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </p>
-                <p class="footer-contact">
+                <p class="footer__contact">
                     <a href="tel:380961111111">+38 096 111 11 11 </a>
                 </p>
             </div>
             <div>
-                <p class="footer-social-text">
+                <p class="footer__social-text">
                     Приєднуйтесь
                 </p>
-                <ul class="footer-social-list">
-                    <li class="footer-social-list__item">
-                        <a href="#" class="footer-social-list__link">
-                            <svg class="footer-social-list__svg">
+                <ul class="footer__social-list">
+                    <li class="footer__social-item">
+                        <a href="#" class="footer__social-link">
+                            <svg class="footer__social-svg">
                                 <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="footer-social-list__item">
-                        <a href="#" class="footer-social-list__link">
-                            <svg class="footer-social-list__svg">
+                    <li class="footer__social-item">
+                        <a href="#" class="footer__social-link">
+                            <svg class="footer__social-svg">
                                 <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="footer-social-list__item">
-                        <a href="#" class="footer-social-list__link">
-                            <svg class="footer-social-list__svg">
+                    <li class="footer__social-item">
+                        <a href="#" class="footer__social-link">
+                            <svg class="footer__social-svg">
                                 <use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="footer-social-list__item">
-                        <a href="#" class="footer-social-list__link">
-                            <svg class="footer-social-list__svg">
+                    <li class="footer__social-item">
+                        <a href="#" class="footer__social-link">
+                            <svg class="footer__social-svg">
                                 <use href="./images/icons/symbol-defs.svg#icon-linkedin"></use>
                             </svg>
                         </a>
@@ -431,14 +431,14 @@
                 </ul>
             </div>
             <div>
-                <p class="footer-social-text">
+                <p class="footer__social-text">
                     Підпишіться на розсилку
                 </p>
-                <form action="" class="footer-form">
-                    <input type="text" class="footer-input" placeholder="E-mail">
-                    <button type="button" class="footer-btn">
+                <form action="" class="footer__form">
+                    <input type="text" class="footer__input" placeholder="E-mail">
+                    <button type="button" class="footer__btn">
                         <span>Підписатися</span>
-                        <svg class="footer-social-list__svg">
+                        <svg class="footer__social-svg">
                             <use href="./images/icons/symbol-defs.svg#icon-send"></use>
                         </svg>
                     </button>
