--- a/index.html
+++ b/index.html
@@ -162,31 +162,31 @@
                         <p class="team__text">
                             Product Designer
                         </p>
-                        <ul class="team__list-icon">
-                            <li class="team__item-icon">
-                                <a href="#" class="team__link">
-                                    <svg class="team__svg">
+                        <ul class="social-list">
+                            <li class="social-list__item">
+                                <a href="#" class="social-list__link">
+                                    <svg class="social-list__svg team__social-list--fill">
                                         <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="team__item-icon">
-                                <a href="#" class="team__link">
-                                    <svg class="team__svg">
+                            <li class="social-list__item">
+                                <a href="#" class="social-list__link">
+                                    <svg class="social-list__svg team__social-list--fill">
                                         <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="team__item-icon">
-                                <a href="#" class="team__link">
-                                    <svg class="team__svg">
+                            <li class="social-list__item">
+                                <a href="#" class="social-list__link">
+                                    <svg class="social-list__svg team__social-list--fill">
                                         <use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="team__item-icon">
-                                <a href="#" class="team__link">
-                                    <svg class="team__svg">
+                            <li class="social-list__item">
+                                <a href="#" class="social-list__link">
+                                    <svg class="social-list__svg team__social-list--fill">
                                         <use href="./images/icons/symbol-defs.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
@@ -201,31 +201,31 @@
                         <p class="team__text">
                             Frontend Developer
                         </p>
-                        <ul class="team__list-icon">
-                            <li class="team__item-icon">
-                                <a href="#" class="team__link">
-                                    <svg class="team__svg">
+                        <ul class="social-list">
+                            <li class="social-list__item">
+                                <a href="#" class="social-list__link">
+                                    <svg class="social-list__svg team__social-list--fill">
                                         <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="team__item-icon">
-                                <a href="#" class="team__link">
-                                    <svg class="team__svg">
+                            <li class="social-list__item">
+                                <a href="#" class="social-list__link">
+                                    <svg class="social-list__svg team__social-list--fill">
                                         <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="team__item-icon">
-                                <a href="#" class="team__link">
-                                    <svg class="team__svg">
+                            <li class="social-list__item">
+                                <a href="#" class="social-list__link">
+                                    <svg class="social-list__svg team__social-list--fill">
                                         <use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="team__item-icon">
-                                <a href="#" class="team__link">
-                                    <svg class="team__svg">
+                            <li class="social-list__item">
+                                <a href="#" class="social-list__link">
+                                    <svg class="social-list__svg team__social-list--fill">
                                         <use href="./images/icons/symbol-defs.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
@@ -240,31 +240,31 @@
                         <p class="team__text">
                             Marketing
                         </p>
-                        <ul class="team__list-icon">
-                            <li class="team__item-icon">
-                                <a href="#" class="team__link">
-                                    <svg class="team__svg">
+                        <ul class="social-list">
+                            <li class="social-list__item">
+                                <a href="#" class="social-list__link">
+                                    <svg class="social-list__svg team__social-list--fill">
                                         <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="team__item-icon">
-                                <a href="#" class="team__link">
-                                    <svg class="team__svg">
+                            <li class="social-list__item">
+                                <a href="#" class="social-list__link">
+                                    <svg class="social-list__svg team__social-list--fill">
                                         <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="team__item-icon">
-                                <a href="#" class="team__link">
-                                    <svg class="team__svg">
+                            <li class="social-list__item">
+                                <a href="#" class="social-list__link">
+                                    <svg class="social-list__svg team__social-list--fill">
                                         <use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="team__item-icon">
-                                <a href="#" class="team__link">
-                                    <svg class="team__svg">
+                            <li class="social-list__item">
+                                <a href="#" class="social-list__link">
+                                    <svg class="social-list__svg team__social-list--fill">
                                         <use href="./images/icons/symbol-defs.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
@@ -279,31 +279,31 @@
                         <p class="team__text">
                             UI Designer
                         </p>
-                        <ul class="team__list-icon">
-                            <li class="team__item-icon">
-                                <a href="#" class="team__link">
-                                    <svg class="team__svg">
+                        <ul class="social-list">
+                            <li class="social-list__item">
+                                <a href="#" class="social-list__link">
+                                    <svg class="social-list__svg team__social-list--fill ">
                                         <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="team__item-icon">
-                                <a href="#" class="team__link">
-                                    <svg class="team__svg">
+                            <li class="social-list__item">
+                                <a href="#" class="social-list__link">
+                                    <svg class="social-list__svg team__social-list--fill">
                                         <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="team__item-icon">
-                                <a href="#" class="team__link">
-                                    <svg class="team__svg">
+                            <li class="social-list__item">
+                                <a href="#" class="social-list__link">
+                                    <svg class="social-list__svg team__social-list--fill">
                                         <use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
                                     </svg>
                                 </a>
                             </li>
-                            <li class="team__item-icon">
-                                <a href="#" class="team__link">
-                                    <svg class="team__svg">
+                            <li class="social-list__item">
+                                <a href="#" class="social-list__link">
+                                    <svg class="social-list__svg team__social-list--fill">
                                         <use href="./images/icons/symbol-defs.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
@@ -398,31 +398,31 @@
                 <p class="footer__social-text">
                     Приєднуйтесь
                 </p>
-                <ul class="footer__social-list">
-                    <li class="footer__social-item">
-                        <a href="#" class="footer__social-link">
-                            <svg class="footer__social-svg">
+                <ul class="social-list footer__social-list--margin20">
+                    <li class="social-list__item">
+                        <a href="#" class="social-list__link footer__social-list--dark">
+                            <svg class="social-list__svg footer__social-list--fill">
                                 <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="footer__social-item">
-                        <a href="#" class="footer__social-link">
-                            <svg class="footer__social-svg">
+                    <li class="social-list__item">
+                        <a href="#" class="social-list__link footer__social-list--dark">
+                            <svg class="social-list__svg footer__social-list--fill">
                                 <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="footer__social-item">
-                        <a href="#" class="footer__social-link">
-                            <svg class="footer__social-svg">
+                    <li class="social-list__item">
+                        <a href="#" class="social-list__link footer__social-list--dark">
+                            <svg class="social-list__svg footer__social-list--fill">
                                 <use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="footer__social-item">
-                        <a href="#" class="footer__social-link">
-                            <svg class="footer__social-svg">
+                    <li class="social-list__item">
+                        <a href="#" class="social-list__link footer__social-list--dark">
+                            <svg class="social-list__svg footer__social-list--fill">
                                 <use href="./images/icons/symbol-defs.svg#icon-linkedin"></use>
                             </svg>
                         </a>
@@ -438,7 +438,7 @@
                     <input type="text" class="footer__input" placeholder="E-mail">
                     <button type="button" class="footer__btn">
                         <span>Підписатися</span>
-                        <svg class="footer__social-svg">
+                        <svg class="social-list__svg footer__social-list--fill">
                             <use href="./images/icons/symbol-defs.svg#icon-send"></use>
                         </svg>
                     </button>
