--- a/portfolio.html
+++ b/portfolio.html
@@ -290,31 +290,31 @@ __<!DOCTYPE html>
                 <p class="footer__social-text">
                     Приєднуйтесь
                 </p>
-                <ul class="footer__social-list">
-                    <li class="footer__social-item">
-                        <a href="#" class="footer__social-link">
-                            <svg class="footer__social-svg">
+                <ul class="social-list footer__social-list--margin20">
+                    <li class="social-list__item">
+                        <a href="#" class="social-list__link footer__social-list--dark">
+                            <svg class="social-list__svg footer__social-list--fill">
                                 <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="footer__social-item">
-                        <a href="#" class="footer__social-link">
-                            <svg class="footer__social-svg">
+                    <li class="social-list__item">
+                        <a href="#" class="social-list__link footer__social-list--dark">
+                            <svg class="social-list__svg footer__social-list--fill">
                                 <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="footer__social-item">
-                        <a href="#" class="footer__social-link">
-                            <svg class="footer__social-svg">
+                    <li class="social-list__item">
+                        <a href="#" class="social-list__link footer__social-list--dark">
+                            <svg class="social-list__svg footer__social-list--fill">
                                 <use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="footer__social-item">
-                        <a href="#" class="footer__social-link">
-                            <svg class="footer__social-svg">
+                    <li class="social-list__item">
+                        <a href="#" class="social-list__link footer__social-list--dark">
+                            <svg class="social-list__svg footer__social-list--fill">
                                 <use href="./images/icons/symbol-defs.svg#icon-linkedin"></use>
                             </svg>
                         </a>
@@ -330,7 +330,7 @@ __<!DOCTYPE html>
                     <input type="text" class="footer__input" placeholder="E-mail">
                     <button type="button" class="footer__btn">
                         <span>Підписатися</span>
-                        <svg class="footer__social-svg">
+                        <svg class="social-list__svg footer__social-list--fill">
                             <use href="./images/icons/symbol-defs.svg#icon-send"></use>
                         </svg>
                     </button>
