--- a/index.html
+++ b/index.html
@@ -447,49 +447,49 @@
 
     </footer>
     <div class="modal modal--is-hidden" data-modal>
-        <form class="modal__form">
+        <form class="modal-form">
 
-            <div class="modal__close" data-modal-close>
-                <svg class="modal__icon" width="11" height="11">
+            <div class="modal-form__close" data-modal-close>
+                <svg class="modal-form__icon" width="11" height="11">
                     <use href="./images/icons/symbol-defs.svg#icon-modal_close"> </use>
                 </svg>
             </div>
-            <h1 class="modal__header">
+            <h1 class="modal-form__header">
                 Залиште свої дані, ми вам передзвонимо
             </h1>
 
-            <label class="modal__label"> Ім'я
-                <svg class="modal__icon" width="12" height="12">
+            <label class="modal-form__label"> Ім'я
+                <svg class="modal-form__icon" width="12" height="12">
                     <use href="./images/icons/symbol-defs.svg#icon-modal_person"> </use>
                 </svg>
-                <input type="text" class="modal__input">
+                <input type="text" class="modal-form__input">
             </label>
-            <label class="modal__label"> Телефон
-                <svg class="modal__icon" width="13" height="13">
+            <label class="modal-form__label"> Телефон
+                <svg class="modal-form__icon" width="13" height="13">
                     <use href="./images/icons/symbol-defs.svg#icon-modal_phone"> </use>
                 </svg>
-                <input type="text" class="modal__input">
+                <input type="text" class="modal-form__input">
             </label>
 
             </label>
-            <label class="modal__label"> Пошта
-                <svg class="modal__icon" width="18" height="18">
+            <label class="modal-form__label"> Пошта
+                <svg class="modal-form__icon" width="18" height="18">
                     <use href="./images/icons/symbol-defs.svg#icon-modal_mail"> </use>
                 </svg>
-                <input type="text" class="modal__input">
+                <input type="text" class="modal-form__input">
             </label>
 
-            <label class="modal__label"> Коментар
-                <textarea name="" placeholder="Введіть текст" class="modal__input" id="" cols="30" rows="10"></textarea>
+            <label class="modal-form__label"> Коментар
+                <textarea name="" placeholder="Введіть текст" class="modal-form__input" id="" cols="30" rows="10"></textarea>
             </label>
 
 
-            <span class="modal__checkbox-text">
-                <input type="checkbox" class="modal__checkbox">
-                Погоджуюся з розсилкою та приймаю <a class="modal__checkbox-link" href="#"> Умови договору </a>
+            <span class="modal-form__checkbox-text">
+                <input type="checkbox" class="modal-form__checkbox">
+                Погоджуюся з розсилкою та приймаю <a class="modal-form__checkbox-link" href="#"> Умови договору </a>
             </span>
 
-            <button class="modal__btn" data-modal-close>Відправити</button>
+            <button class="button button--modal" data-modal-close>Відправити</button>
         </form>
     </div>
     <script src="./js/script.js"></script>
