add Mobile style

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-__<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -69,6 +69,7 @@ __<!DOCTYPE html>
 
 
             </div>
+            <button class="menu-button" type="button" aria-label="close" aria-controls="navigation" aria-expanded="false"></button>
         </div>
 
 
@@ -335,6 +336,7 @@ __<!DOCTYPE html>
         </div>
 
     </footer>
+    <script src="./js/burger.js"></script>
 </body>
 
 </html>
