--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                         Studio
                     </span>
                 </a>
-                <nav class="navigation">
+                
+                <nav class="navigation" id="navigation">
                     <ul class="navigation-list">
                         <li class="navigation-list__item  navigation-list__item--active">
                             <a href="index.html" class="navigation-list__link">Студія
@@ -50,6 +51,7 @@
                     </ul>
 
                 </nav>
+               
 
             </div>
 
@@ -72,6 +74,7 @@
 
 
             </div>
+            <button class="menu-button" type="button" aria-label="close" aria-controls="navigation" aria-expanded="false"></button>
         </div>
 
 
@@ -493,6 +496,7 @@
         </form>
     </div>
     <script src="./js/script.js"></script>
+    <script src="./js/burger.js"></script>
 </body>
 
 </html>
