add Mobile First

--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
                 </svg>
             </div>
             <h1 class="modal-form__header">
-                Залиште свої дані, ми вам передзвонимо
+                Залиште свої дані,<br/> ми вам передзвонимо
             </h1>
 
             <label class="modal-form__label"> Ім'я
