fix burger menu

--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
                         Studio
                     </span>
                 </a>
-                
+
                 <nav class="navigation" id="navigation">
+
                     <ul class="navigation-list">
                         <li class="navigation-list__item  navigation-list__item--active">
                             <a href="index.html" class="navigation-list__link">Студія
@@ -49,9 +50,35 @@
                             </a>
                         </li>
                     </ul>
+                    <ul class="navigation-contact-list">
+                        <li class="navigation-contact-list__item">
+                            <a href="tel:380961111111" class="navigation-contact-list__link">
+                                +38 096 111 11 11
+                            </a>
+                        </li>
+                        <li class="navigation-contact-list__item  navigation-contact-list__item--email" >
+                            <a href="mailto:info@devstudio.com" class="navigation-contact-list__link">
+                                info@devstudio.com
+                            </a>
 
+                        </li>
+                    </ul>
+                    <ul class="navigation-social-list">
+                        <li class="navigation-social-list__item">
+                            <a href="#" class="navigation-social-list__link">Instagram</a>
+                        </li>
+                        <li class="navigation-social-list__item">
+                            <a href="#" class="navigation-social-list__link">Twitter</a>
+                        </li>
+                        <li class="navigation-social-list__item">
+                            <a href="#" class="navigation-social-list__link">Facebook</a>
+                        </li>
+                        <li class="navigation-social-list__item">
+                            <a href="#" class="navigation-social-list__link">LinkedIn</a>
+                        </li>
+                    </ul>
                 </nav>
-               
+
 
             </div>
 
@@ -74,7 +101,8 @@
 
 
             </div>
-            <button class="menu-button" type="button" aria-label="close" aria-controls="navigation" aria-expanded="false"></button>
+            <button class="menu-button" type="button" aria-label="close" aria-controls="navigation"
+                aria-expanded="false"></button>
         </div>
 
 
@@ -458,7 +486,7 @@
                 </svg>
             </div>
             <h1 class="modal-form__header">
-                Залиште свої дані,<br/> ми вам передзвонимо
+                Залиште свої дані,<br /> ми вам передзвонимо
             </h1>
 
             <label class="modal-form__label"> Ім'я
@@ -483,7 +511,8 @@
             </label>
 
             <label class="modal-form__label"> Коментар
-                <textarea name="" placeholder="Введіть текст" class="modal-form__input" id="" cols="30" rows="10"></textarea>
+                <textarea name="" placeholder="Введіть текст" class="modal-form__input" id="" cols="30"
+                    rows="10"></textarea>
             </label>
 
 
