--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
                         <figure class="box-list__figure">
                             <picture>
                                 <source
-                                    srcset="./images/desktop/block1_img1@1x.jpg 1x, ./images/desktop/block1_img1@2x.jpg 2x"
+                                    srcset="./images/desktop/box_img1@1x.jpg 1x, ./images/desktop/box_img1@2x.jpg 2x"
                                     media="(min-width: 1200px)">
-                                <img src="./images/block1_img1.jpg" alt="Notebook" width="370" class="box-list__img">
+                                <img src="./images/box_img1.jpg" alt="Notebook" width="370" class="box-list__img">
                             </picture>
 
                             <figcaption class="box-list__caption">Десктопні додатки</figcaption>
@@ -171,9 +171,9 @@
                         <figure class="box-list__figure">
                             <picture>
                                 <source
-                                    srcset="./images/desktop/block1_img2@1x.jpg 1x, ./images/desktop/block1_img2@2x.jpg 2x"
+                                    srcset="./images/desktop/box_img2@1x.jpg 1x, ./images/desktop/box_img2@2x.jpg 2x"
                                     media="(min-width: 1200px)">
-                                <img src="./images/block1_img2.jpg" alt="ceel" width="370" class="box-list__img">
+                                <img src="./images/box_img2.jpg" alt="ceel" width="370" class="box-list__img">
                             </picture>
 
                             <figcaption class="box-list__caption">Мобільні додатки</figcaption>
@@ -185,9 +185,9 @@
                         <figure class="box-list__figure">
                             <picture>
                                 <source
-                                    srcset="./images/desktop/block1_img3@1x.jpg 1x, ./images/desktop/block1_img3@2x.jpg 2x"
+                                    srcset="./images/desktop/box_img3@1x.jpg 1x, ./images/desktop/box_img3@2x.jpg 2x"
                                     media="(min-width: 1200px)">
-                                <img src="./images/block1_img3.jpg" alt="Tablet" width="370" class="box-list__img">
+                                <img src="./images/box_img3.jpg" alt="Tablet" width="370" class="box-list__img">
 
                             </picture>
 
@@ -208,15 +208,15 @@
                     <li class="team-list__item">
                         <picture>
                             <source
-                                srcset="./images/desktop/block2_img1@1x.jpg 1x, ./images/desktop/block2_img1@2x.jpg 2x"
+                                srcset="./images/desktop/team_img1@1x.jpg 1x, ./images/desktop/team_img1@2x.jpg 2x"
                                 media="(min-width: 1200px)">
                             <source
-                                srcset="./images/tablet/block2_img1@1x.jpg 1x, ./images/tablet/block2_img1@2x.jpg 2x"
-                                media="(min-width: 769px)">
+                                srcset="./images/tablet/team_img1@1x.jpg 1x, ./images/tablet/team_img1@2x.jpg 2x"
+                                media="(min-width: 768px)">
                             <source
-                                srcset="./images/mobile/block2_img1@1x.jpg 1x, ./images/mobile/block2_img1@2x.jpg 2x"
-                                media="(max-width: 768px)">
-                            <img src="./images/block2_img1.jpg" alt="Ігор Дем'яненко" width="270"
+                                srcset="./images/mobile/team_img1@1x.jpg 1x, ./images/mobile/team_img1@2x.jpg 2x"
+                                media="(max-width: 767px)">
+                            <img src="./images/team_img1.jpg" alt="Ігор Дем'яненко" width="270"
                                 class="team-list__img">
                         </picture>
 
@@ -260,15 +260,15 @@
                     <li class="team-list__item">
                         <picture>
                             <source
-                                srcset="./images/desktop/block2_img2@1x.jpg 1x, ./images/desktop/block2_img2@2x.jpg 2x"
+                                srcset="./images/desktop/team_img2@1x.jpg 1x, ./images/desktop/team_img2@2x.jpg 2x"
                                 media="(min-width: 1200px)">
                             <source
-                                srcset="./images/tablet/block2_img2@1x.jpg 1x, ./images/tablet/block2_img2@2x.jpg 2x"
-                                media="(min-width: 769px)">
+                                srcset="./images/tablet/team_img2@1x.jpg 1x, ./images/tablet/team_img2@2x.jpg 2x"
+                                media="(min-width: 768px)">
                             <source
-                                srcset="./images/mobile/block2_img2@1x.jpg 1x, ./images/mobile/block2_img2@2x.jpg 2x"
-                                media="(max-width: 768px)">
-                            <img src="./images/block2_img2.jpg" alt="Ольга Рєпіна" width="270" class="team-list__img">
+                                srcset="./images/mobile/team_img2@1x.jpg 1x, ./images/mobile/team_img2@2x.jpg 2x"
+                                media="(max-width: 767px)">
+                            <img src="./images/team_img2.jpg" alt="Ольга Рєпіна" width="270" class="team-list__img">
                         </picture>
 
                         <h6 class="team-list__title">
@@ -311,15 +311,15 @@
                     <li class="team-list__item">
                         <picture>
                             <source
-                                srcset="./images/desktop/block2_img3@1x.jpg 1x, ./images/desktop/block2_img3@2x.jpg 2x"
+                                srcset="./images/desktop/team_img3@1x.jpg 1x, ./images/desktop/team_img3@2x.jpg 2x"
                                 media="(min-width: 1200px)">
                             <source
-                                srcset="./images/tablet/block2_img3@1x.jpg 1x, ./images/tablet/block2_img3@2x.jpg 2x"
-                                media="(min-width: 769px)">
+                                srcset="./images/tablet/team_img3@1x.jpg 1x, ./images/tablet/team_img3@2x.jpg 2x"
+                                media="(min-width: 768px)">
                             <source
-                                srcset="./images/mobile/block2_img3@1x.jpg 1x, ./images/mobile/block2_img3@2x.jpg 2x"
-                                media="(max-width: 768px)">
-                            <img src="./images/block2_img3.jpg" alt="Микола Тарасов" width="270" class="team-list__img">
+                                srcset="./images/mobile/team_img3@1x.jpg 1x, ./images/mobile/team_img3@2x.jpg 2x"
+                                media="(max-width: 767px)">
+                            <img src="./images/team_img3.jpg" alt="Микола Тарасов" width="270" class="team-list__img">
                         </picture>
 
                         <h6 class="team-list__title">
@@ -362,15 +362,15 @@
                     <li class="team-list__item">
                         <picture>
                             <source
-                                srcset="./images/desktop/block2_img4@1x.jpg 1x, ./images/desktop/block2_img4@2x.jpg 2x"
+                                srcset="./images/desktop/team_img4@1x.jpg 1x, ./images/desktop/team_img4@2x.jpg 2x"
                                 media="(min-width: 1200px)">
                             <source
-                                srcset="./images/tablet/block2_img4@1x.jpg 1x, ./images/tablet/block2_img4@2x.jpg 2x"
-                                media="(min-width: 769px)">
+                                srcset="./images/tablet/team_img4@1x.jpg 1x, ./images/tablet/team_img4@2x.jpg 2x"
+                                media="(min-width: 768px)">
                             <source
-                                srcset="./images/mobile/block2_img4@1x.jpg 1x, ./images/mobile/block2_img4@2x.jpg 2x"
-                                media="(max-width: 768px)">
-                            <img src="./images/block2_img4.jpg" alt="Михайло Єрмаков" width="270"
+                                srcset="./images/mobile/team_img4@1x.jpg 1x, ./images/mobile/team_img4@2x.jpg 2x"
+                                media="(max-width: 767px)">
+                            <img src="./images/team_img4.jpg" alt="Михайло Єрмаков" width="270"
                                 class="team-list__img">
                         </picture>
 
